--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "node": "^21.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.10.0",
-        "vite": "^4.4.5"
+        "react-router-dom": "^6.10.0"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.10",
@@ -29,6 +28,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.3.5"
+        "tailwindcss": "^3.3.5",
+        "vite": "^4.4.5"
     }
 }
