--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
         "vite": "^4.4.5"
+    },
+    "engines": {
+        "node": "14.17.5",
+        "npm": "6.14.14"
     }
 }
