--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "vite": "^4.4.5"
     },
     "engines": {
-        "node": "14.17.5",
+        "node": "16.x",
         "npm": "6.14.14"
     }
 }
