--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "vite": "^4.4.5"
     },
     "engines": {
-        "node": "16.x",
-        "npm": "6.14.14"
+        "node": "20.x"
     }
 }
