--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vite": "^4.4.5"
     },
     "engines": {
-        "node": "18.x"
+        "node": "18.x",
+        "npm": "6.x"
     }
 }
